--- a/EstoqueMVC/EstoqueMVC/Views/Produto/Index.cshtml
+++ b/EstoqueMVC/EstoqueMVC/Views/Produto/Index.cshtml
@@ -22,7 +22,7 @@
                     <th>ID</th>
                     <th>Nome</th>
                     <th>Quantidade</th>
-
+                    <th>Descrição</th>
                 </tr>
             </thead>
 
@@ -36,9 +36,11 @@
                         <td>@produto.Id</td>
                         <td>@produto.Nome</td>
                         <td>@produto.Quantidade</td>
+                        <td>@produto.Descricao</td>
                     </tr>
                 }
             </tbody>
+            <p>
 
         </table>
 
