--- a/EstoqueMVC/EstoqueMVC/Views/Produto/Index.cshtml
+++ b/EstoqueMVC/EstoqueMVC/Views/Produto/Index.cshtml
@@ -32,7 +32,7 @@
                 {
                     <tr>
                         <td>@produto.Id</td>
-                        <td>@produto.Nome</td>
+                        <td>@produto.Nome  <a href></a></td>
                         <td>@produto.Quantidade</td>
                         <td>@produto.Descricao</td>
                     </tr>
