--- a/EstoqueMVC/EstoqueMVC/Views/Produto/Visualizador.cshtml
+++ b/EstoqueMVC/EstoqueMVC/Views/Produto/Visualizador.cshtml
@@ -15,6 +15,11 @@
         Preço:@ViewBag.Produto.Preco<br />
         Descrição:@ViewBag.Produto.Descricao<br />
         Categoria:@ViewBag.Produto.Categoria.Nome<br />
+
+        <!---primeiro parametro se passa o nome do texto que quer colocar, o segundo pra onde ira ir depois de clicado, o terceiro 
+            fala o controller que quer mandar
+            --->
+        @Html.ActionLink("Voltar Para a Lista de Produtos", "index","Produto")
     </div>
 </body>
 </html>
