--- a/EstoqueMVC/EstoqueMVC/Views/Shared/_Layout.cshtml
+++ b/EstoqueMVC/EstoqueMVC/Views/Shared/_Layout.cshtml
@@ -9,31 +9,22 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LOJA</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacidade</a>
-                        </li> 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="Index">Produto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+
+        <div class="header">
+            <ul class="nav nav-pills m-4" >
+                <li class="p-2">@Html.ActionLink("Produtos ","index","Produto")</li>
+                <li class=" p-2">@Html.ActionLink("Categorias","index","Categorias")</li>
+                <li class=" p-2">@Html.ActionLink("Cadastrar Produto","Form","Produto")</li>
+            </ul>
+            <h3 class="text-muted">
+                Sistema de Estoque 
+            </h3>
+        </div>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
+            <!----coloca todos os conteudos --->
             @RenderBody()
         </main>
     </div>
